--- a/khwarizmii/latex/mathpartir.sty
+++ b/khwarizmii/latex/mathpartir.sty
@@ -1,13 +1,13 @@
 %  Mathpartir --- Math Paragraph for Typesetting Inference Rules
 %
-%  Copyright (C) 2001, 2002, 2003 Didier Rémy
+%  Copyright (C) 2001, 2002, 2003, 2004, 2005 Didier RÃ©my
 %
 %  Author         : Didier Remy 
-%  Version        : 1.1.1
+%  Version        : 1.2.0
 %  Bug Reports    : to author
 %  Web Site       : http://pauillac.inria.fr/~remy/latex/
 % 
-%  WhizzyTeX is free software; you can redistribute it and/or modify
+%  Mathpartir is free software; you can redistribute it and/or modify
 %  it under the terms of the GNU General Public License as published by
 %  the Free Software Foundation; either version 2, or (at your option)
 %  any later version.
@@ -24,7 +24,7 @@
 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{mathpartir}
-    [2003/07/10 version 1.1.1 Math Paragraph for Typesetting Inference Rules]
+    [2005/12/20 version 1.2.0 Math Paragraph for Typesetting Inference Rules]
 
 %%
 
@@ -38,7 +38,9 @@
 
 %% PART I: Typesetting maths in paragraphe mode
 
-\newdimen \mpr@tmpdim
+%% \newdimen \mpr@tmpdim
+%% Dimens are a precious ressource. Uses seems to be local.
+\let \mpr@tmpdim \@tempdima
 
 % To ensure hevea \hva compatibility, \hva should expands to nothing 
 % in mathpar or in inferrule
@@ -86,17 +88,32 @@
      \MathparBindings}
   {\unskip \ifmmode $\fi\egroup $$\ignorespacesafterend}
 
+\newenvironment{mathparpagebreakable}[1][]
+  {\begingroup 
+   \par
+   \mpr@savepar \parskip 0em \hsize \linewidth \centering
+      \mpr@prebindings \mpr@paroptions #1%
+      \vskip \abovedisplayskip \vskip -\lineskip%
+     \ifmmode  \else  $\displaystyle\fi
+     \MathparBindings
+  }
+  {\unskip
+   \ifmmode $\fi \par\endgroup
+   \vskip \belowdisplayskip
+   \noindent
+  \ignorespacesafterend}
+
 % \def \math@mathpar #1{\setbox0 \hbox {$\displaystyle #1$}\ifnum
 %     \wd0 < \hsize  $$\box0$$\else \bmathpar #1\emathpar \fi}
 
 %%% HOV BOXES
 
 \def \mathvbox@ #1{\hbox \bgroup \mpr@normallineskip 
-  \vbox \bgroup \tabskip 0em \let \+ \cr
+  \vbox \bgroup \tabskip 0em \let \\ \cr
   \halign \bgroup \hfil $##$\hfil\cr #1\crcr \egroup \egroup
   \egroup}
 
-\def \mathhvbox@ #1{\setbox0 \hbox {\let \+\qquad $#1$}\ifnum \wd0 < \hsize
+\def \mathhvbox@ #1{\setbox0 \hbox {\let \\\qquad $#1$}\ifnum \wd0 < \hsize
       \box0\else \mathvbox {#1}\fi}
 
 
@@ -105,10 +122,10 @@
 \newtoks \mpr@lista
 \newtoks \mpr@listb
 
-\long \def\mpr@cons #1\mpr@to#2{\mpr@lista {\+{#1}}\mpr@listb \expandafter
+\long \def\mpr@cons #1\mpr@to#2{\mpr@lista {\\{#1}}\mpr@listb \expandafter
 {#2}\edef #2{\the \mpr@lista \the \mpr@listb}}
 
-\long \def\mpr@snoc #1\mpr@to#2{\mpr@lista {\+{#1}}\mpr@listb \expandafter
+\long \def\mpr@snoc #1\mpr@to#2{\mpr@lista {\\{#1}}\mpr@listb \expandafter
 {#2}\edef #2{\the \mpr@listb\the\mpr@lista}}
 
 \long \def \mpr@concat#1=#2\mpr@to#3{\mpr@lista \expandafter {#2}\mpr@listb
@@ -118,10 +135,10 @@
 \long \def \mpr@head@ #1#2\mpr@head@ #3#4{\def #4{#1}\def#3{#2}}
 
 \def \mpr@flatten #1\mpr@to #2{\expandafter \mpr@flatten@ #1\mpr@flatten@ #1#2}
-\long \def \mpr@flatten@ \+#1\+#2\mpr@flatten@ #3#4{\def #4{#1}\def #3{\+#2}}
+\long \def \mpr@flatten@ \\#1\\#2\mpr@flatten@ #3#4{\def #4{#1}\def #3{\\#2}}
 
 \def \mpr@makelist #1\mpr@to #2{\def \mpr@all {#1}%
-   \mpr@lista {\+}\mpr@listb \expandafter {\mpr@all}\edef \mpr@all {\the
+   \mpr@lista {\\}\mpr@listb \expandafter {\mpr@all}\edef \mpr@all {\the
    \mpr@lista \the \mpr@listb \the \mpr@lista}\let #2\empty 
    \def \mpr@stripof ##1##2\mpr@stripend{\def \mpr@stripped{##2}}\loop
      \mpr@flatten \mpr@all \mpr@to \mpr@one
@@ -132,10 +149,10 @@
    \repeat
 }
 
-%% Part III -- Type inference rules
-
 \def \mpr@rev #1\mpr@to #2{\let \mpr@tmp \empty
-   \def \+##1{\mpr@cons ##1\mpr@to \mpr@tmp}#1\let #2\mpr@tmp}
+   \def \\##1{\mpr@cons ##1\mpr@to \mpr@tmp}#1\let #2\mpr@tmp}
+
+%% Part III -- Type inference rules
 
 \newif \if@premisse
 \newbox \mpr@hlist
@@ -161,6 +178,7 @@
 %              \fi}%
 % }
 
+\def \mpr@item #1{$\displaystyle #1$}
 \def \mpr@sep{2em}
 \def \mpr@blank { }
 \def \mpr@hovbox #1#2{\hbox
@@ -169,7 +187,7 @@
   \else \ifx #1B\@premissefalse
   \else
      \PackageError{mathpartir}
-       {Premisse orientation should either be P or B}
+       {Premisse orientation should either be T or B}
        {Fatal error in Package}%
   \fi \fi
   \def \@test {#2}\ifx \@test \mpr@blank\else
@@ -180,12 +198,12 @@
   \mpr@tmpdim 0em
   \expandafter \mpr@makelist #2\mpr@to \mpr@flat
   \if@premisse \mpr@rev \mpr@flat \mpr@to \@rev \else \let \@rev \mpr@flat \fi
-  \def \+##1{%
+  \def \\##1{%
      \def \@test {##1}\ifx \@test \empty
         \mpr@htovlist
         \mpr@tmpdim 0em %%% last bug fix not extensively checked
      \else
-      \setbox0 \hbox{$\displaystyle {##1}$}\relax
+      \setbox0 \hbox{\mpr@item {##1}}\relax
       \advance \mpr@tmpdim by \wd0
       %\mpr@tmpdim 1.02\mpr@tmpdim
       \ifnum \mpr@tmpdim < \hsize
@@ -226,10 +244,37 @@
     \let\@@above\above \let\@@abovewithdelims\abovewithdelims
   }{}
 
+%% The default
 
 \def \mpr@@fraction #1#2{\hbox {\advance \hsize by -0.5em
-    $\displaystyle {#1\@@over #2}$}}
+    $\displaystyle {#1\mpr@over #2}$}}
+\def \mpr@@nofraction #1#2{\hbox {\advance \hsize by -0.5em
+    $\displaystyle {#1\@@atop #2}$}}
+
 \let \mpr@fraction \mpr@@fraction
+
+%% A generic solution to arrow
+
+\def \mpr@make@fraction #1#2#3#4#5{\hbox {%
+     \def \mpr@tail{#1}%
+     \def \mpr@body{#2}%
+     \def \mpr@head{#3}%
+     \setbox1=\hbox{$#4$}\setbox2=\hbox{$#5$}%
+     \setbox3=\hbox{$\mkern -3mu\mpr@body\mkern -3mu$}%
+     \setbox3=\hbox{$\mkern -3mu \mpr@body\mkern -3mu$}%
+     \dimen0=\dp1\advance\dimen0 by \ht3\relax\dp1\dimen0\relax
+     \dimen0=\ht2\advance\dimen0 by \dp3\relax\ht2\dimen0\relax
+     \setbox0=\hbox {$\box1 \@@atop \box2$}%
+     \dimen0=\wd0\box0
+     \box0 \hskip -\dimen0\relax
+     \hbox to \dimen0 {$%
+       \mathrel{\mpr@tail}\joinrel
+       \xleaders\hbox{\copy3}\hfil\joinrel\mathrel{\mpr@head}%
+     $}}}
+
+%% Old stuff should be removed in next version
+\def \mpr@@nothing #1#2
+    {$\lower 0.01pt \mpr@@nofraction {#1}{#2}$}
 \def \mpr@@reduce #1#2{\hbox
     {$\lower 0.01pt \mpr@@fraction {#1}{#2}\mkern -15mu\rightarrow$}}
 \def \mpr@@rewrite #1#2#3{\hbox
@@ -245,6 +290,7 @@
      \let \hva \mpr@hva
      \let \@rulename \mpr@empty
      \let \@rule@options \mpr@empty
+     \let \mpr@over \@@over
      \mpr@inferrule@}
 \newcommand {\mpr@inferrule@}[3][]
   {\everymath={\displaystyle}%       
@@ -270,11 +316,11 @@
 % or
 % \inferrule* [options]{[premisses}{conclusions}
 %
-% Premisses and conclusions are lists of elements separated by \+
-% Each \+ produces a break, attempting horizontal breaks if possible, 
+% Premisses and conclusions are lists of elements separated by \\
+% Each \\ produces a break, attempting horizontal breaks if possible, 
 % and  vertical breaks if needed. 
 % 
-% An empty element obtained by \+\+ produces a vertical break in all cases. 
+% An empty element obtained by \\\\ produces a vertical break in all cases. 
 %
 % The former rule is aligned on the fraction bar. 
 % The optional label appears on top of the rule
@@ -299,18 +345,30 @@
 %  after                execute val at the end/right
 %  
 %  Note that most options must come in this order to avoid strange
-%  typesetting (in particular  leftskip must preceed left and Left and
+%  typesetting (in particular  leftskip must precede left and Left and
 %  rightskip must follow Right or right; vdots must come last 
 %  or be only followed by rightskip. 
 %  
 
+%% Keys that make sense in all kinds of rules
+\def \mprset #1{\setkeys{mprset}{#1}}
+\define@key {mprset}{andskip}[]{\mpr@andskip=#1}
+\define@key {mprset}{lineskip}[]{\lineskip=#1}
+\define@key {mprset}{lessskip}[]{\lineskip=0.5\lineskip}
 \define@key {mprset}{flushleft}[]{\mpr@centerfalse}
 \define@key {mprset}{center}[]{\mpr@centertrue}
-\def \mprset #1{\setkeys{mprset}{#1}}
+\define@key {mprset}{rewrite}[]{\let \mpr@fraction \mpr@@rewrite}
+\define@key {mprset}{atop}[]{\let \mpr@fraction \mpr@@nofraction}
+\define@key {mprset}{myfraction}[]{\let \mpr@fraction #1}
+\define@key {mprset}{fraction}[]{\def \mpr@fraction {\mpr@make@fraction #1}}
+\define@key {mprset}{sep}{\def\mpr@sep{#1}}
 
 \newbox \mpr@right
 \define@key {mpr}{flushleft}[]{\mpr@centerfalse}
 \define@key {mpr}{center}[]{\mpr@centertrue}
+\define@key {mpr}{rewrite}[]{\let \mpr@fraction \mpr@@rewrite}
+\define@key {mpr}{myfraction}[]{\let \mpr@fraction #1}
+\define@key {mpr}{fraction}[]{\def \mpr@fraction {\mpr@make@fraction #1}}
 \define@key {mpr}{left}{\setbox0 \hbox {$\TirName {#1}\;$}\relax
      \advance \hsize by -\wd0\box0}
 \define@key {mpr}{width}{\hsize #1}
@@ -339,7 +397,6 @@
 \define@key {mpr}{vdots}{\def \mpr@vdots {\@@atop \mpr@vdotfil{#1}}}
 \define@key {mpr}{after}{\edef \mpr@after {\mpr@after #1}}
 
-\newdimen \rule@dimen
 \newcommand \mpr@inferstar@ [3][]{\setbox0
   \hbox {\let \mpr@rulename \mpr@empty \let \mpr@vdots \relax
          \setbox \mpr@right \hbox{}%
@@ -348,8 +405,8 @@
           \mpr@inferrule [{\mpr@rulename}]{#2}{#3}\fi
           \box \mpr@right \mpr@vdots$}
   \setbox1 \hbox {\strut}
-  \rule@dimen \dp0 \advance \rule@dimen by -\dp1
-  \raise \rule@dimen \box0}
+  \@tempdima \dp0 \advance \@tempdima by -\dp1
+  \raise \@tempdima \box0}
 
 \def \mpr@infer {\@ifnextchar *{\mpr@inferstar}{\mpr@inferrule}}
 \newcommand \mpr@err@skipargs[3][]{}
@@ -371,9 +428,11 @@
 % make a short name \infer is not already defined
 \@ifundefined {infer}{\let \infer \mpr@infer}{}
 
-\def \tir@name #1{\hbox {\small \sc #1}}
+\def \TirNameStyle #1{\small \textsc{#1}}
+\def \tir@name #1{\hbox {\small \TirNameStyle{#1}}}
 \let \TirName \tir@name
-\let \RefTirName \tir@name
+\let \DefTirName \TirName
+\let \RefTirName \TirName
 
 %%% Other Exports
 
