--- a/khwarizmii/latex/beamerthemedbt.sty
+++ b/khwarizmii/latex/beamerthemedbt.sty
@@ -1,6 +1,9 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{dbt}
 
+% diagrams
+\RequirePackage{tikz}
+
 % required packages
 \RequirePackage{graphicx}
 \RequirePackage{fontspec}
@@ -58,25 +61,45 @@
     \color{foreground}%
 }
 
+\RequirePackage[verbatim]{lstfiracode}%
 % lstlisting
 \RequirePackage{listings}
-\RequirePackage[verbatim]{lstfiracode}
-\lstset{
-    language=haskell,
-    tabsize=2,
-    escapeinside={*'}{'*},
+\lstset{%
+  language=haskell,%
+  tabsize=2,%
+  escapeinside={*'}{'*},%
+  % keywordstyle=\color{keywords},
+  showspaces=false,%
+  showstringspaces=false,%
+  commentstyle=\color{comments}\emph,%
+  frame=single,%
+  fontadjust=true,%
+  rulecolor=\color{comments},%
+  rulesepcolor=\color{comments},%
+  style=FiraCodeStyle,%
+  basicstyle=\ttfamily,%
+  morekeywords={Data}%
+}%
+
+\lstnewenvironment{code}{%
+  \lstset{%
+    language=haskell,%
+    tabsize=2,%
+    escapeinside={*'}{'*},%
     % keywordstyle=\color{keywords},
-    showspaces=false,
-    showstringspaces=false,
-    commentstyle=\color{comments}\emph,
-    frame=single,
-    fontadjust=true,
-    rulecolor=\color{comments},
-    rulesepcolor=\color{comments},
-    style=FiraCodeStyle,
-    basicstyle=\ttfamily,
-    morekeywords={Data}
-}
+    showspaces=false,%
+    showstringspaces=false,%
+    commentstyle=\color{comments}\emph,%
+    frame=single,%
+    fontadjust=true,%
+    rulecolor=\color{comments},%
+    rulesepcolor=\color{comments},%
+    style=FiraCodeStyle,%
+    basicstyle=\ttfamily,%
+    morekeywords={Data}%
+  }%
+}{}%
+
 \lstMakeShortInline[columns=fixed]|
 
 % hyperlinks
@@ -92,6 +115,33 @@
 \newtheorem{remarks}[theorem]{Remarks}
 \newtheorem{remark}[theorem]{Remark}
 \newtheorem{conjecture}[theorem]{Conjecture}
+\newtheorem{claim}[theorem]{Claim}
+
+% Custom frames for sections and subsections
+\newcommand{\sectionframe}[1]{
+  \section{#1}
+  \begin{frame}[plain]
+    \vfill \centering
+    \begin{beamercolorbox}[sep=8pt,center,shadow=true,rounded=true]{title}
+      \usebeamerfont{title}\insertsectionhead\par%
+    \end{beamercolorbox}
+    \vfill
+  \end{frame}
+}
+
+\newenvironment{subsectionframe}[2]
+{ \subsection{#1}
+  \begin{frame}[#2]{\insertsectionhead\ \textemdash\ \insertsubsectionhead}
+}
+{ \end{frame} }
+
+\newenvironment{subsectionframenl}[2]
+{ \subsection{#1}
+  \begin{frame}[#2]{\insertsectionhead\\
+      \textemdash\ \insertsubsectionhead}
+}
+{ \end{frame} }
+
 
 
 % some macros
